--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -26,7 +26,7 @@
   }
 
   hr {
-    border: 1px solid var(--blue);
+    border: 0.5px solid var(--blue);
   }
 
   a {
@@ -39,6 +39,10 @@
 
   h2 {
     @include margin-tb(32px, 24px);
+  }
+
+  h3 {
+    margin-bottom: 24px;
   }
 
   p,
@@ -233,6 +237,10 @@
 
 /* Accordion
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.accordion-row:not(:last-child) {
+  border-bottom: 3px solid var(--dark-blue);
+}
+
 .accordion {
   cursor: pointer;
   padding: 8px 0;
@@ -240,11 +248,10 @@
   text-align: left;
   border: none;
   outline: none;
-  transition: 0.4s;
+  transition: 1s;
   font-weight: var(--bold);
   color: var(--dark-blue);
   border-radius: 0;
-  border-bottom: 3px solid var(--dark-blue);
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -259,6 +266,7 @@
 
   &.active::after {
     content: fa-content($fa-var-minus);
+    padding-bottom: 16px;
   }
 
   @include phablet {
@@ -267,10 +275,10 @@
 }
 
 .panel {
-  display: none;
-  padding: 16px 16px 0;
+  padding: 0 16px 0;
+  max-height: 0;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  transition: max-height 0.4s ease-out;
   color: var(--blue);
 
   ul {
