--- a/sass/mm-theme/mixins/_cards.scss
+++ b/sass/mm-theme/mixins/_cards.scss
@@ -34,6 +34,8 @@
       border-bottom: 12px solid $secondaryColor;
       img {
         width: 100%;
+        height: 220px;
+        object-fit: cover;
       }
     }
 
