--- a/sass/style.scss
+++ b/sass/style.scss
@@ -103,6 +103,7 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 @import 'mm-theme/pages/front-page';
 @import 'mm-theme/pages/page';
 @import 'mm-theme/pages/single';
+@import 'mm-theme/pages/characters-poster';
 @import 'mm-theme/pages/privacy-policy';
 @import 'mm-theme/pages/sitemap';
 @import 'mm-theme/pages/404';
