--- a/sass/mm-theme/base/_banner.scss
+++ b/sass/mm-theme/base/_banner.scss
@@ -33,7 +33,6 @@
       justify-content: center;
       align-items: flex-start;
       width: auto;
-      margin-left: 83px;
       // height: calc(100vh - 180px); // Correct Code to Go to Prod
       height: calc(100vh - 210px); // With the WP Top Bar
 
@@ -42,6 +41,8 @@
         margin-bottom: 24px;
         font-size: 4rem;
         text-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+        line-height: 44px;
+        padding-right: 12%;
       }
     }
   }
