--- a/sass/mm-theme/base/_footer.scss
+++ b/sass/mm-theme/base/_footer.scss
@@ -7,22 +7,21 @@
   font-size: 1.4rem;
   padding: 3.3rem 0;
 
-  @include desktop {
-    margin-top: 7.2rem;
-  }
-
   a,
   p {
     font-size: 1.4rem;
   }
 
   .container {
-    @extend %flex-column;
+    display: flex;
+    flex-direction: column;
   }
 
   &__logo {
-    @extend .flex-center;
+    display: flex;
+    justify-content: center;
     margin-bottom: 32px;
+
     img {
       height: 60px;
       width: auto;
@@ -34,6 +33,10 @@
       img {
         height: 100px;
       }
+    }
+
+    @include widescreen {
+      margin-right: 100px;
     }
   }
 
@@ -78,6 +81,7 @@
   }
 
   @include desktop {
+    margin-top: 7.2rem;
     a,
     p {
       font-size: 1.4rem;
@@ -85,8 +89,14 @@
 
     .container {
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: center;
+    }
+  }
+
+  @include widescreen {
+    .container {
+      justify-content: flex-start;
     }
   }
 }
