--- a/sass/mm-theme/pages/_tpl-search.scss
+++ b/sass/mm-theme/pages/_tpl-search.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-top: 32px;
 
     h4 {
       color: var(--dark-blue);
