style: few style changes

--- a/sass/mm-theme/pages/_tpl-search.scss
+++ b/sass/mm-theme/pages/_tpl-search.scss
@@ -15,7 +15,9 @@
     }
     &__content {
       display: flex;
-      #search {
+      
+      input[type='text'],
+      input[type='password'] {
         width: 84%;
         @extend %search-bar;
       }
