--- a/sass/mm-theme/pages/_tpl-search.scss
+++ b/sass/mm-theme/pages/_tpl-search.scss
@@ -3,7 +3,8 @@
 --------------------------------------------------------------*/
 
 #tpl-search {
-  .search-form {
+  .search-form,
+  .staff-form {
     display: flex;
     flex-direction: column;
     width: 100%;
