--- a/sass/mm-theme/base/_banner.scss
+++ b/sass/mm-theme/base/_banner.scss
@@ -122,10 +122,11 @@
         font-weight: var(--semi-bold);
         line-height: 15px;
         color: #fff;
-        @include padding-x(8px);
         font-size: 1.2rem;
+        padding: 0 4px;
 
         @include desktop {
+          padding: 0 8px;
           font-size: 1.6rem;
         }
       }
@@ -133,7 +134,10 @@
       .breadcrumb_last {
         font-size: inherit;
         font-weight: var(--semi-bold);
-        padding-left: 8px;
+        padding-left: 4px;
+        @include desktop {
+          padding-left: 8px;
+        }
       }
     }
   }
