--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -87,6 +87,16 @@ a {
   }
 }
 
+/* Blockquote
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+blockquote,
+blockquote p {
+  margin: 0;
+  color: var(--paragraph-text);
+  font-weight: var(--semi-bold);
+  font-size: 1.6rem;
+}
+
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
