--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -93,7 +93,7 @@ blockquote,
 blockquote p {
   margin: 0;
   color: var(--paragraph-text);
-  font-weight: var(--semi-bold);
+  font-weight: var(--medium);
   font-size: 1.6rem;
 }
 
