--- a/sass/mm-theme/base/_banner.scss
+++ b/sass/mm-theme/base/_banner.scss
@@ -56,7 +56,7 @@
     }
 
     .mobile-hero-content {
-      @include padding-y(24px);
+      padding: 24px 0;
       background-color: var(--dark-blue);
       text-align: center;
 
@@ -87,7 +87,7 @@
   }
 
   &__menu {
-    @include padding-y(10px);
+    padding: 10px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
