--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -66,7 +66,7 @@
       position: relative;
 
       img {
-        @include padding-x(24px);
+        padding: 0 24px;
         background-color: #fff;
         max-height: 90px;
 
