--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -229,8 +229,13 @@
       display: none;
     }
 
-    #song-player {
+    #player-container {
+      display: flex;
       width: 100%;
+
+      #player {
+        align-self: center;
+      }
     }
   }
 }
