--- a/sass/style.scss
+++ b/sass/style.scss
@@ -59,6 +59,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 $fa-font-path: "fonts/fontawesome/webfonts";
 @import 'fonts/fontawesome/scss/fontawesome';
 @import 'fonts/fontawesome/scss/solid';
+@import 'fonts/fontawesome/scss/brands';
 
 /*--------------------------------------------------------------
 # Reset
