--- a/css/style.prefix.css
+++ b/css/style.prefix.css
@@ -6467,7 +6467,7 @@ div.wpcf7-mail-sent-ok {
         width: 21px; }
     .playlist .player .pause {
       display: none; }
-    .playlist .player #song-player {
+    .playlist .player #player-container {
       width: 100%; }
 
 .search-content h4 {
