--- a/sass/mm-theme/pages/_tpl-search.scss
+++ b/sass/mm-theme/pages/_tpl-search.scss
@@ -16,6 +16,7 @@
     }
     &__content {
       display: flex;
+      justify-content: space-between;
       
       input[type='text'],
       input[type='password'] {
