--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -279,6 +279,7 @@
 
     button {
       margin-top: 16px;
+      min-width: 100%;
     }
   }
 
@@ -311,7 +312,6 @@
   justify-content: space-between;
   align-items: flex-start;
   background-color: #fff;
-  display: flex;
   align-items: baseline;
 
   &::after {
