--- a/sass/style.scss
+++ b/sass/style.scss
@@ -119,3 +119,8 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 # Footer
 --------------------------------------------------------------*/
 @import 'mm-theme/base/footer';
+
+/*--------------------------------------------------------------
+# Print
+--------------------------------------------------------------*/
+@import 'mm-theme/print';
