--- a/sass/mm-theme/mixins/_cards.scss
+++ b/sass/mm-theme/mixins/_cards.scss
@@ -20,9 +20,11 @@
     &__heading {
       margin-bottom: 8px;
 
-      &:not(:first-child) {
-        margin-top: 16px;
-      }
+      margin-top: 16px;
+      
+      // &:not(:first-child) {
+      //   margin-top: 16px;
+      // }
 
       @include desktop {
         margin-bottom: 32px;
