--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -105,6 +105,8 @@
     display: block;
     padding-left: 32px;
     border-left: 1px solid var(--blue);
+    position: sticky;
+    top: 32px;
   }
 
   h2 {
