--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -339,15 +339,16 @@
   }
 }
 
-#menu-overlay {
-  height: 100%;
-  width: 100%;
+#overlay {
   position: fixed;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
-  overflow-y: hidden;
-  transition: 0.5s;
   display: none;
+  width: 100%;
+  height: 100%;
+  top: 114px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #00000080;
+  z-index: 1;
+  cursor: pointer;
 }
