--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -94,11 +94,12 @@
     }
   }
 
-  // .four {
-  //   @include desktop {
-  //     height: 60vh;
-  //   }
-  // }
+  .four {
+    @include desktop {
+      position: sticky;
+      top: 32px;
+    }
+  }
 }
 
 /* Template Partials Components
@@ -111,8 +112,6 @@
     display: block;
     padding-left: 32px;
     border-left: 1px solid var(--blue);
-    position: sticky;
-    top: 32px;
   }
 
   h2 {
