--- a/sass/mm-theme/mixins/_flex.scss
+++ b/sass/mm-theme/mixins/_flex.scss
@@ -25,6 +25,11 @@
   align-items: center;
 }
 
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @mixin grid($columns) {
