fix: styling issues

--- a/sass/mm-theme/pages/_tpl-munch-move-common.scss
+++ b/sass/mm-theme/pages/_tpl-munch-move-common.scss
@@ -2,7 +2,7 @@
 # Characters Poster - Page Template
 --------------------------------------------------------------*/
 
-#tpl-characters-poster {
+#tpl-munch-move-common {
   .card__header > img {
     height: unset;
   }
