--- a/sass/mm-theme/mixins/_flex.scss
+++ b/sass/mm-theme/mixins/_flex.scss
@@ -26,8 +26,10 @@
 }
 
 .flex-between {
-  display: flex;
-  justify-content: space-between;
+  @include desktop {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 /* Grid
