--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -4,13 +4,6 @@
 
 /* Global Classes
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-// .content-area{
-// }
-
-// .site-main {
-// }
-
-// .entry-header,
 .entry-title {
   margin-bottom: 24px;
 
@@ -360,7 +353,8 @@
 }
 
 .content-center {
-  h1, h2 {
+  h1,
+  h2 {
     text-align: center;
   }
 }
@@ -370,4 +364,22 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.article {
+  @include desktop {
+    margin: 50px 0 40px;
+  }
+}
+
+#tpl-caring {
+  h1 {
+    @extend .entry-title;
+  }
+
+  h3 {
+    @include mobile-only {
+      margin-top: 32px;
+    }
+  }
 }
