--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -25,7 +25,8 @@
     h1 {
       margin-bottom: 40px;
     }
-    .side-article {
+    .side-article p {
+      font-size: 1.5rem;
       font-weight: var(--bold);
 
       a {
