--- a/sass/mm-theme/pages/_sitemap.scss
+++ b/sass/mm-theme/pages/_sitemap.scss
@@ -28,13 +28,13 @@
           color: var(--blue);
         }
 
-        .page_item_has_children {
-          .children {
-            a {
-              color: #8c8c8c;
-            }
-          }
-        }
+        // .page_item_has_children {
+        //   .children {
+        //     a {
+        //       color: #8c8c8c;
+        //     }
+        //   }
+        // }
       }
     }
   }
