--- a/sass/mm-theme/mixins/_flex.scss
+++ b/sass/mm-theme/mixins/_flex.scss
@@ -36,7 +36,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @mixin grid($columns) {
   display: grid;
-  grid-template-columns: repeat(1fr, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-template-rows: auto;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
