--- a/sass/mm-theme/mixins/_flex.scss
+++ b/sass/mm-theme/mixins/_flex.scss
@@ -43,6 +43,7 @@
 
   @include desktop {
     grid-template-columns: repeat($columns, 1fr);
+    grid-template-rows: auto;
     grid-column-gap: 30px;
     grid-row-gap: 30px;
   }
